logout name modified

--- a/homepage/templates/logout.html
+++ b/homepage/templates/logout.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="align-middle" style="color: #ea2088; font-style: bold; font-size: 3rem;">Invi</div>
+    <div class="align-middle" style="color: #ea2088; font-style: bold; font-size: 3rem;">Pet Gestor</div>
     <div class="align-middle" style="color: #fff">Sistema Pet Gestor</div>
     <br><br><br>
 
