--- a/transactions/templates/sales/new_sale.html
+++ b/transactions/templates/sales/new_sale.html
@@ -19,17 +19,18 @@
         <div class="panel-heading panel-heading-text">Customer Details</div>
         <div class="panel-body">
             
-            {{ form.name.errors }}
-            <!--{{ form.phone.errors }}
+            <!--{{ form.name.errors }}
+            {{ form.phone.errors }}
             {{ form.email.errors }}
             {{ form.address.errors }}-->
             {{ form.cpf.errors }}
 
+            <!--
             <div class="form-group">
                 <label for="{{ form.name.id_for_label }}" class="panel-body-text">Customer Name:</label>
                 {{ form.name }}                
             </div>
-            <!--
+            
             <div class="form-row">
                 <div class="form-group col-md-6"> 
                     <label for="{{ form.phone.id_for_label }}" class="panel-body-text">Phone:</label>
@@ -215,8 +216,8 @@
                             element.parents('.form-row').find('.quantity').val(0);
                             deleteForm('form', element);
                         } else {
-                            element.parents('.form-row').find('.quantity').val(squantity-1);
-                            quantity = squantity - 1;
+                            element.parents('.form-row').find('.quantity').val(squantity);
+                            quantity = squantity;
                             custom_alert.render('Exceeded current stock available');
                         }
                     }
